--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -27,7 +27,7 @@ body {
 }
 
 .section-description {
-    color:  #757575;
+    color: #757575;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
@@ -86,10 +86,15 @@ nav a {
 }
 
 /* main section styles*/
-main{
+main section {
+    margin-top: 130px;
+}
+
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
 /* about section style */
 .about {
     padding: 130px;
@@ -98,10 +103,35 @@ main{
     margin: 130px 0;
 }
 
-.about-info-container{
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
+}
+
+/* skill related styles  */
+#what-i-do-description {
+    padding: 30px 150px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* Resume-section styles  */
+.resume-column-title {
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
