--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -146,5 +146,30 @@ main {
 }
 .download-cv{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 50px ;
+}
+
+/* footer styles  */
+
+.footer-container{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+    margin-right: 30px;
+    padding-left: 30px;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
 }
